# mxos-v4

./: .gitignore  Cargo.toml  README.md
kernel/: Cargo.toml
kernel/src/: bitmap.rs  buddy.rs  console.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  pmm.rs  psf.rs  rustc-ice-2024-02-24T08_17_25-14875.txt  rustc-ice-2024-02-24T08_18_02-14932.txt  serial.rs  vmm.rs
kernel/src/interrupts/apic/: esr.rs  icr.rs  lapic_ver.rs  lvt.rs  mod.rs  prio_reg.rs  svr.rs
kernel/src/malloc/: mod.rs  pairing_heap.rs  thread_owned.rs
kernel/src/memory/: mod.rs  pmm.rs  vmm.rs
kernel/src/memory/malloc/: mod.rs  mod.rs.bak
kernel/src/output/: console.rs  mod.rs  serial.rs
kernel/src/psf/: ucs2.rs
runner/: Cargo.toml
runner/src/: main.rs
uefi-attempt/: .nvim.lua  Cargo.toml  run.sh
uefi-attempt/esp/: NvVars
uefi-attempt/esp/efi/boot/: bootx64.efi  img.qoi
uefi-attempt/src/: align.rs  main.rs  serial.rs
