[package]
name = "mxos-v4"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = "0.26"
x86_64 = "0.14"
rand = { version = "0.8", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
qoi = { version = "0.4", default-features = false }
uart_16550 = "0.3"
spin = "0.9"
log = "0.4"
